# melon-chess-simulator

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md  format.sh  lint.sh
include/melon/: byte.hpp  constants.hpp  game.hpp  piece.hpp  standard_pieces.hpp  traits.hpp  traits_json.hpp  util.hpp
include/melon/cli/: text_io.hpp
include/melon/math/: matrix.hpp  vector.hpp
src/: game.cpp  main.cpp  piece.cpp  traits.cpp
src/cli/: main.cpp  text_io.cpp
test/: CMakeLists.txt  math.cpp  piece.cpp  test_hello.cpp  traits.cpp
